--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,3 +23,29 @@
     color: whitesmoke;
     padding: 5px 20px;
 }
+
+.category {
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    display: block;
+    position: absolute;
+}
+
+.category-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.category-heading {
+    position: absolute;
+    bottom: 50%;
+    background-color: black;
+    color: whitesmoke;
+    padding: 5px 20px;
+    text-align: center;
+    margin-left: 50%;
+    transform: translate(-50%);
+    font-size: 42px;
+}
