--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,7 @@
     height: 600px;
     overflow: hidden;
     display: block;
-    position: absolute;
+    position: relative;
 }
 
 .category-image {
@@ -48,4 +48,21 @@
     margin-left: 50%;
     transform: translate(-50%);
     font-size: 42px;
+}
+
+.posts{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.post-card {
+    height: 200px;
+    overflow: hidden;
+    position: relative;
+}
+
+.post-card-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
