--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap');
+
+/* Fonts */
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto', sans-serif;
+}
+
+p {
+    font-family: 'Open Sans', sans-serif;
+}
+
 .categories {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
