Refactor navbar template and style in css

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,7 @@
-<a href="#">
-    <h1>FitFinity</h1>
-</a>
-<hr>
+<nav>
+    <div class="nav-wrapper">
+        <a class="logo" href="{% url 'home' %}">FitFinity</a>
+        <a class="login" href="#">Login</a>
+    </div>
+</nav>
+<br>
