--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* Fonts */
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
@@ -7,6 +13,40 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
     font-family: 'Open Sans', sans-serif;
+}
+
+/* navbar */
+nav {
+    background-color: black;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav-wrapper {
+    width: 1000px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 24px;
+    font-weight: 500;
+}
+.login {
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 16px;
+    font-weight: 300;
+}
+.login:hover {
+    text-decoration: underline;
 }
 
 .categories {
