--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: black;
+}
+
 /* Fonts */
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
@@ -22,6 +26,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0;
 }
 
 .nav-wrapper {
@@ -47,6 +52,43 @@ nav {
 }
 .login:hover {
     text-decoration: underline;
+}
+
+/* Hero section */
+.hero-image {
+    height: 400px;
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+}
+
+.hero-backgorund {
+    background-color: rgba(0, 0, 0, 0.322);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hero-text {
+    padding: 0 20vw;
+}
+
+.hero-heading {
+    text-align: center;
+    font-weight: 700;
+    font-size: 32px;
+    letter-spacing: 2px;
+    color: whitesmoke;
+}
+
+.hero-p {
+    text-align: center;
+    font-weight: 700;
+    font-size: 16px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: whitesmoke;
 }
 
 .categories {
