--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,16 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Home</h1>
 
-<div class="categories">
-    {% for category in categories %}
-        <div class="category-card">
-            <a href="{% url 'category' category.id %}">
-                <img class="category-card-image" src="{{ category.featured_image.url }}">
-                <h3 class="category-card-heading">{{ category.title }}</h3>
-            </a>
-        </div>
-    {% endfor %}
+<div class="categories-header">
+    <h2>Latest Articles</h2>
+    <i class="fa-solid fa-chevron-down arrow"></i>
+</div>
+
+<div class="categories-wrapper">
+    <div class="categories">
+        {% for category in categories %}
+            <div class="category-card">
+                <a href="{% url 'category' category.id %}">
+                    <img class="category-card-image" src="{{ category.featured_image.url }}">
+                    <h3 class="category-card-heading">{{ category.title }}</h3>
+                </a>
+            </div>
+        {% endfor %}
+    </div>
 </div>
 {% endblock content %}
