--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,12 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
 }
 
+h2 {
+    color: whitesmoke;
+    text-align: center;
+    text-transform: uppercase;
+}
+
 p {
     font-family: 'Open Sans', sans-serif;
 }
@@ -91,21 +97,49 @@ nav {
     color: whitesmoke;
 }
 
+/* Categories section */
+.categories-wrapper {
+    width: 1000px;
+    margin: 0 auto;
+}
+
+.categories-header {
+    padding: 100px 0;
+    display: grid;
+}
+
+.arrow {
+    color: whitesmoke;
+    font-size: 24px;
+    margin: 0 auto;
+}
+
 .categories {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
 }
 
 .category-card {
     height: 500px;
     overflow: hidden;
     position: relative;
+    box-shadow: 0 0 100px rgb(44, 44, 44);
+    margin: 5px;
 }
 
 .category-card-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: 0.5s;
+}
+
+.category-card-image:hover {
+    width: 105%;
+    height: 105%;
+    object-fit: cover;
+    transition: 0.5s;
 }
 
 .category-card-heading {
