--- a/templates/base.html
+++ b/templates/base.html
@@ -27,5 +27,8 @@
     <!-- Content Goes here -->
     {% endblock content %}
     
+
+    <!-- Font owesome script -->
+    <script src="https://kit.fontawesome.com/481ffab01d.js" crossorigin="anonymous"></script>
 </body>
 </html>
