--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ body {
 /* Fonts */
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
+    color: whitesmoke;
 }
 
 h2 {
@@ -23,6 +24,7 @@ h2 {
 
 p {
     font-family: 'Open Sans', sans-serif;
+    color: whitesmoke;
 }
 
 /* navbar */
@@ -33,6 +35,7 @@ nav {
     align-items: center;
     justify-content: center;
     margin: 0;
+    position: relative;
 }
 
 .nav-wrapper {
@@ -66,6 +69,8 @@ nav {
     background-size: cover;
     background-position: center;
     margin: 0;
+    position: relative;
+    top: -18px;
 }
 
 .hero-backgorund {
@@ -151,12 +156,15 @@ nav {
     padding: 5px 20px;
 }
 
+/* Category template */
+
 .category {
     width: 100%;
-    height: 600px;
+    height: 400px;
     overflow: hidden;
     display: block;
-    position: relative;
+    position: absolute;
+    top: 50px;
 }
 
 .category-image {
@@ -177,19 +185,65 @@ nav {
     font-size: 42px;
 }
 
-.posts{
+/* Posts section*/
+
+th, td ,tr {
+    color: whitesmoke;
+    padding: 5px 10px;
+}
+td {
+    background-color: rgb(29, 29, 29);
+}
+
+.post-wrapper {
+    width: 1000px;
+    margin: 0 auto;
+}
+
+.post-header {
+    padding: 100px 0;
+    display: grid;
+}
+
+.arrow {
+    color: whitesmoke;
+    font-size: 24px;
+    margin: 0 auto;
+}
+
+.posts {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
 }
 
 .post-card {
-    height: 200px;
+    height: 500px;
     overflow: hidden;
     position: relative;
+    box-shadow: 0 0 100px rgb(44, 44, 44);
+    margin: 5px;
 }
 
 .post-card-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: 0.5s;
+}
+
+.post-card-image:hover {
+    width: 105%;
+    height: 105%;
+    object-fit: cover;
+    transition: 0.5s;
+}
+
+.post-card-heading {
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    background-color: black;
+    color: whitesmoke;
+    padding: 5px 20px;
 }
