--- a/static/css/style.css
+++ b/static/css/style.css
@@ -280,3 +280,47 @@ td {
 .table .table-border {
     width: 200px;
 }
+
+/* Signin, signup and register forms */
+.form {
+    background-color: rgb(46, 46, 46);
+    width: 320px;
+    margin: auto;
+    padding: 20px;
+}
+
+.form-header {
+    text-align: center;
+}
+
+.form-p {
+    padding: 20px 0;
+}
+
+.form-link {
+    color: orange;
+}
+
+input[type=text], 
+input[type=password],
+input[type=email] {
+    display: block;
+    width: 100%;
+    height: 25px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 500;
+    
+}
+
+input {
+    margin-bottom: 20px;
+}
+
+.form-btn {
+    padding: 5px 10px;
+    border: none;
+    background-color: orange;
+    font-weight: 500;
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+}
