--- a/static/css/style.css
+++ b/static/css/style.css
@@ -284,6 +284,36 @@ td {
     width: 200px;
 }
 
+/* Comments */
+.comment-wrapper {
+    display: block;
+    width: 1000px;
+    margin: auto;
+    padding: 50px 0;
+}
+
+.comment-header {
+    margin-bottom: 20px;
+}
+
+.comment-linebreak {
+    margin-bottom: 50px;
+}
+
+.comment {
+    padding: 20px;
+    margin-bottom: 20px;
+    background-color: rgb(12, 12, 12);
+    max-width: 450px;
+}
+
+.comment-details {
+    display: block;
+    padding-bottom: 20px;
+    color: whitesmoke;
+    text-decoration: underline;
+}
+
 /* Signin, signup and register forms */
 .form {
     background-color: rgb(46, 46, 46);
