Style comment form

--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -27,12 +27,14 @@
 </div>
 
 {% if request.user.is_authenticated %}
-<div class="comment-form">
-    <form method="POST" action="">
-        {% csrf_token %}
-        <input type="text" name="body" placeholder="Write comment here...">
-        <input type="submit">
-    </form>
+<div class="form-wrapper">
+    <div class="comment-form">
+        <form method="POST" action="">
+            {% csrf_token %}
+            <input type="text" name="body" rows="4" placeholder="Write comment here...">
+            <input class="form-btn" type="submit">
+        </form>
+    </div>
 </div>
 {% endif %}
 
