Add comment delete functionality

--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -23,7 +23,7 @@
             <small class="comment-details">
                 {{comment.user}} -- posted  {{comment.created_on | timesince}} ago
                 {% if request.user == comment.user %}
-                <a class="delete-comment" href="{#}"><i class="fa-solid fa-trash"></i></a>
+                <a class="delete-comment" href="{% url 'delete-comment' comment.id %}"><i class="fa-solid fa-trash"></i></a>
                 {% endif %}
             </small>
             <p class="comment-body">{{comment.body}}</p>
