--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
     <!-- Content Goes here -->
     {% endblock content %}
     
+    {% include 'footer.html' %}
 
     <!-- Font owesome script -->
     <script src="https://kit.fontawesome.com/481ffab01d.js" crossorigin="anonymous"></script>
