--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitFinity</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <meta name="description" content="The largest bodybuilding portal.">
+    <meta name="keywords" content="bodybuilding, fitnes, nutrition, forum">
 </head>
 <body>
     {% include 'navbar.html' %}
