--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="post">
-    <img class="post-image" src="{{ post.featured_image.url }}">
+    <img class="post-image" src="{{ post.featured_image.url }}" alt="post-image">
     <h1 class="post-heading">{{post.title}}</h1>
 </div>
 
