--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav>
+<nav id="nav">
     <div class="nav-wrapper">
         <a class="logo" href="{% url 'home' %}">FitFinity</a>
         {% if user.is_authenticated %}
